# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-trst-core"
version = "0.1.0"
edition = "2021"
description = "Canonical cam.video manifest types for .trst archives (WASM-compatible)"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
