# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-trst-wasm"
version = "0.2.0"
edition = "2021"
description = "WASM bindings for TrustEdge verification"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Protocol definitions from trst-protocols
trustedge-trst-protocols = { path = "../trst-protocols" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
js-sys = { workspace = true }
console_error_panic_hook = "0.1"

# WASM-compatible crypto dependencies
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
base64 = "0.22"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "File",
  "FileReader",
  "Blob",
  "FileSystemDirectoryHandle",
  "FileSystemFileHandle",
  "FileSystemHandle",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"