# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-wasm"
version = "0.1.0"
edition = "2021"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
description = "WebAssembly bindings for TrustEdge cryptographic operations"
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "wasm", "encryption", "security", "aes"]
categories = ["cryptography", "wasm", "web-programming"]

[features]
default = []

[lib]
name = "trustedge_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Use workspace dependencies where possible
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = "0.22"

# Console logging for debugging
console_error_panic_hook = "0.1"

# WASM testing dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

# Profile moved to workspace root