# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "sealedge-wasm"
version = "0.2.0"
edition = "2021"
authors = ["TrustEdge Labs <dev@trustedgelabs.com>"]
description = "WebAssembly bindings for TrustEdge cryptographic operations"
license = "MPL-2.0"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "wasm", "encryption", "security", "aes"]
categories = ["cryptography", "wasm", "web-programming"]

[features]
default = []

[lib]
name = "sealedge_wasm"
crate-type = ["cdylib", "rlib"]

[package.metadata.trustedge]
tier = "experimental"
maintained = false

[dependencies]
# Use workspace dependencies where possible
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }  # v0.3 with "wasm_js" for rand 0.9's dependency chain
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }  # Activates "js" on transitive getrandom 0.2 for WASM target
base64 = "0.22"

# Console logging for debugging
console_error_panic_hook = "0.1"

# WASM testing dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-machete]
ignored = ["getrandom", "getrandom_v02"]

# Profile moved to workspace root