# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-pubky-advanced"
version = "0.1.0"
edition = "2021"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
description = "Pubky integration for TrustEdge - hybrid encryption with decentralized key discovery"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "pubky", "decentralized", "encryption", "hybrid"]
categories = ["cryptography", "network-programming"]

[package.metadata.trustedge]
tier = "experimental"
maintained = false

[dependencies]
# Core TrustEdge functionality
trustedge-core = { path = "../../core" }

# Pubky integration
pubky = "0.5.4"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hkdf = "0.12"
blake3 = "1.5"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
anyhow = "1.0"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
thiserror = "1.0"

# Async support
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]

[[example]]
name = "hybrid_encryption_demo"
required-features = []
