# Copyright (c) 2025 TRUSTEDGE LABS LLC
# MPL-2.0: https://mozilla.org/MPL/2.0/
# Project: trustedge — Privacy and trust at the edge.


[package]
name = "trustedge-pubky"
version = "0.1.0"
edition = "2021"
authors = ["TrustEdge Labs LLC <contact@trustedgelabs.com>"]
license = "MPL-2.0"
description = "Clean adapter between TrustEdge core and Pubky network"
repository = "https://github.com/TrustEdge-Labs/trustedge"
keywords = ["cryptography", "pubky", "adapter", "bridge"]
categories = ["cryptography", "network-programming"]

[[bin]]
name = "trustedge-pubky"
path = "src/bin/trustedge-pubky.rs"

[package.metadata.trustedge]
tier = "experimental"
maintained = false

[dependencies]
# Core TrustEdge functionality
trustedge-core = { path = "../../core" }

# Pubky network integration
pubky = "0.5.4"

# Utilities
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
